# cursor-rules-mdc

./: .automation-config.yml  .editorconfig  .eslintrc.js  .eslintrc.mjs  .gitattributes  .gitignore  .gitmessage  .markdownlint-cli2.jsonc  .prettierrc  .releaserc.js  .versionrc.json  AUTOMATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  cursor-tools.js  eslint.config.js  package-lock.json  package.json  release-it.json  test-smart-commit.md
.automation/: project.env  project.json
.cursor/plans/active/: phase3-structure-professionnelle.md  phase4-automatisation-universelle.md  scripts-cross-platform-compatibility.md  smart-commit-tests-integration.md  structure-projet-base.md
.cursor/plans/completed/: 2024-phase1-fondations-legales-versioning.md  Plan réorganisation.md  doc-update-plan-.md  mcp-perso-install.md  phase4-automatisation-universelle.md  scripts-cross-platform-compatibility.md  structure-projet-base-TERMINE.md
.cursor/plans/templates/: generic.md
.cursor/plans/todo/: mode-pause-intelligent.md  phase4-automatisation-universelle.md  phase5-environnement-developpement.md  phase6-gui-project-generator.md  (+2 more)
.cursor/rules/: 001_workspace.mdc  002_planning_methodology.mdc  003_coding_standards.mdc  004_security_guidelines.mdc  005_testing_strategy.mdc  006_memory_bank.mdc  007_modes.mdc  008_github_workflow.mdc
.githooks/: commit-msg  post-commit  pre-commit  prepare-commit-msg
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: auto-detect.yml  ci.yml  quality.yml  release.yml
docs/: architecture.md  examples.md  installation.md  usage.md
examples/advanced-usage/: README.md
examples/basic-usage/: README.md
scripts/: auto-release.js  build.js  build.sh  clean.js  clean.sh  commit-helper.js  commit-helper.sh  deploy.js  deploy.sh  functionality-mapping.md  project-detector.js  setup-automation.js  setup-automation.sh  setup.js  setup.sh  version-manager.js
scripts/legacy/: auto-release.sh  build.sh  deploy.sh  project-detector.sh  version-manager.sh
scripts/lib/: git-helper.js  github-helper.js  npm-helper.js  smart-commit-detector.js  utils.js
scripts/templates/: script-template.js
src/: index.js
templates/component/: README.md
templates/project-base/: README.md
templates/python-base/: README.md  pyproject.toml  requirements.txt
(+6 files in other folders)
